--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
               </button>
             </li>
             <li class="nav-item">
-              <button type="button" class="btn btn-danger scrape-btn">
+              <button type="button" class="btn btn-danger clear-btn">
                 Clear Articles
               </button>
             </li>
