added note section

--- a/public/index.html
+++ b/public/index.html
@@ -71,6 +71,7 @@
       <!--ARTICLES + NOTES-->
       <div id="articles" class="article-container"></div>
     </div>
+    <div id="notes"></div>
 
     <!-- Optional JavaScript -->
 
